--- a/NguyenLab3.html
+++ b/NguyenLab3.html
@@ -51,14 +51,23 @@
 
     <!--  Features -->
     <section id="features">
-
-      <h3>Easy to use.</h3>
-      <p>So easy to use, you can do it in your sleep!</p>
-
-      <h3>Fantastic Students</h3>
-      <p> We have study buddies for all majors. </p>
-
-      <h3>Guaranteed to always have a study buddy.</h3>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="heart-icon"><i class="fas fa-heart fa-3x"></i></div>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, you can do it in your sleep!</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="target-icon"><i class="fas fa-bullseye fa-3x"></i></div>
+          <h3>Fantastic Students</h3>
+          <p>We have study buddies for all majors.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="check-icon"><i class="fas fa-check fa-3x"></i></div>
+          <h3>Guaranteed to always have a study buddy.</h3>
+          <p>You'll never have to study alone again.</p>
+        </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
