--- a/NguyenLab3.html
+++ b/NguyenLab3.html
@@ -74,10 +74,28 @@
 
     <section id="testimonials">
       <h2>I no longer have to study alone. No more cramming. Lower stress!</h2>
-      <img src="images/study-img-300.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com">
+      <img src="images/study-img-300.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
       <em>Cindy, UCSD</em>
 
     </section>
+
+    <section id="press">
+      <div class ="row">
+        <div class="col-lg-6">
+          <img src="images/study-smarter-logo.png" alt="study smarter img" class="press-logo">
+        </div>
+        <div class="col-lg-6">
+          <img src="images/a-1.png" alt="a1 academy of study img" class="press-logo">
+        </div>
+        <div class="col-lg-6">  
+          <img src="images/game-one.png" alt="game one academics games img" class="press-logo">
+        </div>
+        <div class="col-lg-6">
+          <img src="images/stellar-grades-academy.png" alt="stellar grades academy" class="press-logo">
+        </div>
+      </div>
+    </section>
+
     <!-- Pricing -->
 <section id="pricing">
 
