--- a/NguyenLab3.html
+++ b/NguyenLab3.html
@@ -43,7 +43,7 @@
           <div class="col-lg-6">
             <h1>Meet new and interesting study buddies.</h1>
             <button type="button" name="button" class="btn btn-dark btn-lg download-button"><i class ="fab fa-apple"></i>Download</button>
-            <button type="button" name="button" class="btn btn-dark btn-lg download-button">Download</button>
+            <button type="button" name="button" class="btn btn-dark btn-lg download-button btn-lg download-button"><i class = "fab fa-google-play">Download</i></button>
           </div>
           <div class="col-lg-6">
             <img src="images/iphone-400.png" alt="iphone with study buddy app" class="img-fluid title-image">
@@ -96,24 +96,6 @@
       </div>
 
     </section>
-
-    <section id="press">
-      <div class ="row">
-        <div class="col-lg-6">
-          <img src="images/study-smarter-logo.png" alt="study smarter img" class="press-logo">
-        </div>
-        <div class="col-lg-6">
-          <img src="images/a-1.png" alt="a1 academy of study img" class="press-logo">
-        </div>
-        <div class="col-lg-6">  
-          <img src="images/game-one.png" alt="game one academics games img" class="press-logo">
-        </div>
-        <div class="col-lg-6">
-          <img src="images/stellar-grades-academy.png" alt="stellar grades academy" class="press-logo">
-        </div>
-      </div>
-    </section>
-
     <!-- Pricing -->
     <section id="pricing">
       <div class="pricing-title">
@@ -128,30 +110,36 @@
             <p class="card-text">5 Matches per Day</p>
             <p class="card-text">10 Messages Per Day</p>
             <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="card-link">Sign Up</a>
+            <button type="button" class="btn btn-custom">
+              <a href="#" class="card-link text-black">Sign Up</a>
+            </button>
           </div>
         </div>
     
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Dean's List</h5>
-            <h6 class="card-subtitle mb-2">29.99</h6>
+            <h6 class="card-subtitle mb-2">$29.99</h6>
             <p class="card-text">Unlimited Matches per Day</p>
             <p class="card-text">Unlimited Messages Per Day</p>
             <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="card-link">Sign Up</a>
+            <button type="button" class="btn btn-custom">
+              <a href="#" class="card-link text-black">Sign Up</a>
+            </button>
           </div>
         </div>
     
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Magna Cum Laude Honors</h5>
-            <h6 class="card-subtitle mb-2">59.99</h6>
+            <h6 class="card-subtitle mb-2">$59.99</h6>
             <p class="card-text">Priority Listing</p>
             <p class="card-text">Unlimited Matches per Day</p>
             <p class="card-text">Unlimited Messages Per Day</p>
             <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="card-link">Sign Up</a>
+            <button type="button" class="btn btn-custom">
+              <a href="#" class="card-link text-black">Sign Up</a>
+            </button>
           </div>
         </div>
       </div>
@@ -159,12 +147,38 @@
 
 <!-- Call To Action -->
 <section id="cta">
-  <h3>Find your bestest study buddy today! Your best learning awaits.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+  <h3 class="cta-heading">Find your bestest study buddy today! Your best learning awaits.</h3>
+  <button type="button" name="button" class="btn btn-dark btn-lg download-button">
+    <i class="fab fa-apple download-button-icon">Download</i>
+  </button>
+  <button type="button" name="button" class="btn btn-dark btn-lg download-button">
+    <i class="fab fa-google-play download-button-icon">Download</i>
+  </button>
 </section>
+
+
+<section id="press">
+  <div class ="row">
+    <div class="col-lg-6">
+      <img src="images/study-smarter-logo.png" alt="study smarter img" class="press-logo">
+    </div>
+    <div class="col-lg-6">
+      <img src="images/a-1.png" alt="a1 academy of study img" class="press-logo">
+    </div>
+    <div class="col-lg-6">  
+      <img src="images/game-one.png" alt="game one academics games img" class="press-logo">
+    </div>
+    <div class="col-lg-6">
+      <img src="images/stellar-grades-academy.png" alt="stellar grades academy" class="press-logo">
+    </div>
+  </div>
+</section>
+
 <footer id="footer">
+  <i class="social-icon fab fa-facebook footer-social-icon"></i>
+  <i class="social-icon fab fa-twitter footer-social-icon"></i>
+  <i class="social-icon fab fa-instagram footer-social-icon"></i>
+  <i class="social-icon fab fa-youtube footer-social-icon"></i>
   <p>Copyright 2020 studyBuddy</p>
 </footer>
     <!-- Optional JavaScript -->
