Touched up on final details

--- a/NguyenLab3.html
+++ b/NguyenLab3.html
@@ -55,17 +55,17 @@
     <section id="features">
       <div class="row">
         <div class="col-lg-4">
-          <div class="heart-icon"><i class="fas fa-heart fa-3x"></i></div>
+          <div class="thumbs-icon"><i class="fas fa-thumbs-up fa-3x"></i></div>
           <h3>Easy to use.</h3>
           <p>So easy to use, you can do it in your sleep!</p>
         </div>
         <div class="col-lg-4">
-          <div class="target-icon"><i class="fas fa-bullseye fa-3x"></i></div>
+          <div class="books-icon"><i class="fas fa-book fa-3x"></i></div>
           <h3>Fantastic Students</h3>
           <p>We have study buddies for all majors.</p>
         </div>
         <div class="col-lg-4">
-          <div class="check-icon"><i class="fas fa-check fa-3x"></i></div>
+          <div class="percent-icon"><i class="fas fa-percentage fa-3x"></i></div>
           <h3>Guaranteed to always have a study buddy.</h3>
           <p>You'll never have to study alone again.</p>
         </div>
@@ -79,23 +79,23 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2>I no longer have to study alone. No more cramming. Lower stress!</h2>
-            <img src="images/study-img-300.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
-            <em>Cindy, UCSD</em>
+            <img src="images/tracy.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
+            <em>Tracy, UCF</em>
           </div>
           <div class="carousel-item">
             <h2>I have been able to improve my grades in just one semester of using the app!</h2>
-            <img src="images/tamarcus-brown-unsplash.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
-            <em>Tamarcus, UCLA</em>
+            <img src="images/cole.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
+            <em>Cole, UCLA</em>
           </div>
           <div class="carousel-item">
             <h2>I can study whenever I want! This fits my studying style!</h2>
-            <img src="images/annie-spratt-unsplash.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
+            <img src="images/Nicole.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com" class="testimonials-image">
             <em>Annie, UCB</em>
           </div>
         </div>
-      </div>
-
     </section>
+
+
     <!-- Pricing -->
     <section id="pricing">
       <div class="pricing-title">
@@ -156,20 +156,21 @@
   </button>
 </section>
 
-
 <section id="press">
-  <div class ="row">
-    <div class="col-lg-6">
-      <img src="images/study-smarter-logo.png" alt="study smarter img" class="press-logo">
-    </div>
-    <div class="col-lg-6">
-      <img src="images/a-1.png" alt="a1 academy of study img" class="press-logo">
-    </div>
-    <div class="col-lg-6">  
-      <img src="images/game-one.png" alt="game one academics games img" class="press-logo">
-    </div>
-    <div class="col-lg-6">
-      <img src="images/stellar-grades-academy.png" alt="stellar grades academy" class="press-logo">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/study-smarter-logo.png" alt="study smarter img" class="press-logo">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/a-1.png" alt="a1 academy of study img" class="press-logo">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/game-one.png" alt="game one academics games img" class="press-logo">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/stellar-grades-academy.png" alt="stellar grades academy" class="press-logo">
+      </div>
     </div>
   </div>
 </section>
