--- a/NguyenLab3.html
+++ b/NguyenLab3.html
@@ -75,7 +75,8 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <div id="testimonal-carousel" class="carousel slide" data-interval="2000" data-ride="carousel">
+      <!-- <div id="testimonal-carousel" class="carousel slide" data-interval="2000" data-ride="carousel"> -->
+      <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-interval="2000">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2>I no longer have to study alone. No more cramming. Lower stress!</h2>
@@ -93,6 +94,16 @@
             <em>Annie, UCB</em>
           </div>
         </div>
+          <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+      </div>
+      </div>
     </section>
 
 
